[package]
name = "tutorial"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.7", features = [
    "dynamic",
    "bevy_gilrs",
    "bevy_winit",
    "render",
    "png",
    "hdr",
    "vorbis",
    "x11",
    "filesystem_watcher" ] }
bevy_kira_audio = { version = "0.9", features = ["ogg", "wav"] }
bevy-inspector-egui = "0.10"
rand = "*"
